# MultiRobot-Explore-v2

robot_client/: CMakeLists.txt  ConfigFileReader.cc  ConfigFileReader.h  MoveHandler.cc  MoveHandler.cc~  MoveHandler.h  MoveHandler.h~  RobotMap.cc  RobotMap.h  SensorDataHandler.cc  SensorDataHandler.h  SensorDataHandler.h~  SensorDataViewer.cc  SensorDataViewer.h  client.cc  compress.h  helpers.cc  helpers.h  readme.txt
robot_client/sampleConfigs/: JamesRobots (copy).txt  lasersTilted.txt  simulator.txt  stereoCamera.txt
robot_server/: CMakeLists.txt  Makefile  RobotMap.h  SensorData.cc  SensorData.h  SensorDataHandler.cc  SensorDataHandler.h  compress.cc  compress.h  readme.txt  server.cc  stereoCamera.cpp  stereoCamera.h  utils.cc  utils.h
robot_server/sampleConfigs/: downLaserConfig.txt  horizonLaserConfig2.txt  upLaserConfig.txt
